# polymarket-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  analyst.py  bot.py  config.py  dry_run.py  executor.py  portfolio.py  pyproject.toml  risk.py  scanner.py  status.py
docs/: quant-article-findings.md
polymarket_bot/: __main__.py  analyst.py  bot.py  config.py  db.py  executor.py  microstructure.py  portfolio.py  risk.py  scanner.py
scripts/: backtest.py  dry_run.py  status.py
